<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/step_minimum_total_parts_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:lineSpacingExtra="@dimen/step_line_spacing"
            android:text="@string/stepper_minimum_parts_description" />

        <EditText
            android:id="@+id/stepper_minimum_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:text="@string/step_minimum_parts"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:lineSpacingExtra="@dimen/step_line_spacing"
            android:text="@string/stepper_total_parts_description" />

        <EditText
            android:id="@+id/stepper_total_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:layout_gravity="center"
            android:inputType="number"
            android:text="@string/step_total_parts"/>

    </LinearLayout>

</merge>